--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <h2>Contact Us</h2>
     <p>Email: contact@judahmathtech.org</p>
     <p>Phone: +91-9080078900</p>
-    <p>Locations:  Thathankulam, Thoothukudi, Tamil Nadu, India – 628622 &  Manchester, UK</p>
+    <p>Locations:  Thathankulam, Thoothukudi, Tamil Nadu, India – 628622 &  Edinburgh, UK</p>
   </section>
 
   <footer>
