--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: contact@judahmathtech.org</p>
+    <p>Email: saponraj@gmail.com</p>
     <p>Phone: +91-9080078900</p>
     <p>Locations:  Thathankulam, Thoothukudi, Tamil Nadu, India – 628622 &  Edinburgh, UK</p>
   </section>
