--- a/pearson.html
+++ b/pearson.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pearson Correlation - JMIRI</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f2f5f9;
+      color: #222;
+      padding: 30px;
+    }
+    h1 {
+      color: #004b8d;
+    }
+    img {
+      max-width: 400px;
+      margin-top: 20px;
+    }
+    a {
+      display: inline-block;
+      margin-top: 30px;
+      text-decoration: none;
+      color: #004b8d;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <h1>Pearson Correlation</h1>
+  <p>
+    Pearson correlation is a measure of the linear relationship between two continuous variables.
+    It gives a value between -1 and +1, where:
+    <ul>
+      <li>+1 → perfect positive linear relationship</li>
+      <li>0 → no linear relationship</li>
+      <li>-1 → perfect negative linear relationship</li>
+    </ul>
+  </p>
+  <img src="pearson_formula.png" alt="Pearson Correlation Formula" />
+
+  <p><strong>Example:</strong> Experience vs Salary among data scientists.</p>
+
+  <a href="index.html">← Back to Home</a>
+</body>
+</html>
 
