--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <h2>6 Types of Correlation in Data Science</h2>
 
     <div class="formula-block">
-      <h3><a href="pearson.html" style="color:#004b8d; text-decoration:none;">1. Pearson Correlation</a></h3>
+      <h3><a href="pearson.html"target="_blank" style="color:#004b8d; text-decoration:none;">1. Pearson Correlation</a></h3>
       <img src="pearson_formula.png" alt="Pearson Formula">
       <p><strong>Variables:</strong> X and Y - continuous variables</p>
       <p><strong>Use When:</strong> You want to check linear relationship between numeric variables.</p>
