--- a/pearson.html
+++ b/pearson.html
@@ -75,6 +75,9 @@
     <tr><td>Emp 9</td><td>9</td><td>7.8</td></tr>
     <tr><td>Emp 10</td><td>10</td><td>8.3</td></tr>
   </table>
+   <h2>📈 Visualization Output</h2>
+<p>This graph shows the linear relationship between Experience and Salary using the sample dataset:</p>
+<img src="Figure_1.png" alt="Pearson Correlation Graph" style="max-width: 100%; height: auto; margin-top: 15px; border: 1px solid #ccc; padding: 5px;">
 
   <h2>🧪 Python Code Example</h2>
   <p>You can use the following Python code to calculate and visualize the Pearson correlation:</p>
