--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <a href="#programs">Programs</a>
     <a href="#research">Research</a>
     <a href="#correlation">Correlation Types</a>
+    <a href="tfidf_example.html">TF-IDF Example</a>
     <a href="#contact">Contact</a>
   </nav>
 
