--- a/index.html
+++ b/index.html
@@ -75,15 +75,18 @@
     <h1>Judah Mathematics & IT Research & Institution</h1>
     <p>Innovating the Future with Logic and Code</p>
   </header>
+<nav>
+  <a href="#about">About</a>
+  <a href="#programs">Programs</a>
+  <a href="#research">Research</a>
+  <a href="#correlation">Correlation Types</a>
+  <a href="tfidf_example.html">TF-IDF Example</a>
+  <a href="naive_bayes.html" style="font-weight:bold; font-size:1.1em;">
+    Scikit-learn’s MultinomialNB & Naive Bayes Formula
+  </a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#programs">Programs</a>
-    <a href="#research">Research</a>
-    <a href="#correlation">Correlation Types</a>
-    <a href="tfidf_example.html">TF-IDF Example</a>
-    <a href="#contact">Contact</a>
-  </nav>
 
   <div class="hero">
     Empowering Minds in Mathematics and Information Technology
